<resources>
    <string name="app_name">Weather</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="description_language">Description Language</string>
    <string name="celsius">ºC</string>
    <string name="fahrenheit">ºF</string>
    <string name="abrevEnglish">EN</string>
    <string name="abrevPortuguese">PT</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="msgSaved">Saved with success!</string>
    <string name="msgNetworkOff">Networf off</string>
    <string name="msgNetworkOn">Network ON</string>
    <string name="unit">º</string>
    <string name="picture_of_sky">Picture of sky</string>
    <string name="virgula">,</string>
    <string name="br">BR</string>
    <string name="image_favorite_city">Image favorite city</string>

</resources>
